[package]
name = "hashtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
ahash = "0.8.0"
fxhash = "0.2.1"
siphasher = "0.3.10"
metrohash = "1.0.6"
wyhash = "0.5.0"
t1ha = "0.1.0"